=cut

=head1 NAME

Sys::SigAction::Changes - List of significant changes

=head1 CHANGES

Revision history for Sys::SigAction.

=head2 Changes in Sys::SigAction 0.02  3 February 2004

   Comment out 'use warnings' for $] < 5.006
   Suppress undefined warning in destructor for $] < 5.008
   Documentation expansion and cleanup
   Add dbd-oracle-timeout.PL 

   Lincoln A Baxter

=head2 Original version: Sys::SigAction 0.01  17 January 2004

	original version; created by h2xs 1.22 with options:
		--compat-version=5.5.0 -X --name=Sys::SigAction  \
      --use-new-tests --skip-warnings --version=0.01

   Lincoln A Baxter

=cut